--- a/ui/src/app/views/account-creation-success/component.html
+++ b/ui/src/app/views/account-creation-success/component.html
@@ -22,4 +22,4 @@
     <button (click)="accountCreationModalsComponent.resendEmail();">Change contact email</button>
   </div>
 </div>
-<app-account-creation-modals [username]="username" [gsuiteDomain]="gsuiteDomain"></app-account-creation-modals>
+<app-account-creation-modals [username]="username" [gsuiteDomain]="gsuiteDomain" (messageEvent)="receiveMessage($event)"></app-account-creation-modals>
