--- a/public-ui/src/app/views/surveys/surveys.component.html
+++ b/public-ui/src/app/views/surveys/surveys.component.html
@@ -2,7 +2,7 @@
 
   <div class="col-xs-12 col-sm-12 col-md-8">
     <div class="page-header">
-      <h2 class="view-title"> {{title}}</h2>
+      <h2> {{title}} </h2>
       <p class="view-sub-title">{{subTitle}} </p>
     </div>
     <div class="white-card-box" >
