--- a/public-ui/src/app/styles/headers.css
+++ b/public-ui/src/app/styles/headers.css
@@ -1,19 +1,26 @@
 h1 {
-  color: #262262;
-  font-family: GothamMedium;
-  font-size: 1.6rem;
+  font-size: 35px;
 }
 h2 {
-  color: #262262;
-  font-family: GothamBold;
-  font-size: 1.25rem;
+  font-size: 32px;
 }
+
 h3 {
-  color: #262262;
-  font-family: GothamBold;
-  font-size: 1rem;
+  font-size: 28px;
 }
+
 h4 {
-  color: #000;
-  font-family: GothamLight;
+  font-size: 24px;
 }
+
+h5 {
+  font-size: 20px;
+}
+h6 {
+  font-size: 16px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #302C71;
+}
+
