--- a/public-ui/src/app/views/quick-search/quick-search.component.html
+++ b/public-ui/src/app/views/quick-search/quick-search.component.html
@@ -1,4 +1,3 @@
-<!-- comment to commit Demo version -->
 <div class="row">
 
   <div class="col-xs-12 col-sm-12 col-md-9">
@@ -13,7 +12,7 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 flex-xs-middle search-input-full">
           <div class="search-wrapper">
             <clr-icon shape="search" class="input-icon-absolute is-info"></clr-icon>
-            <input type="text" id="search-db" placeholder="Keyword Search" [(ngModel)]="searchText" (ngModelChange)="searchDomains()">
+            <input type="text" id="search-db" placeholder="Keyword Search" [formControl]="searchText" autofocus>
           </div>
         </div>
 
@@ -45,6 +44,10 @@
             </div>
           </div>
       </div>
+      <div class="col-xs-12" *ngIf="! domainResults || domainResults.length === 0">
+        <h6> No EHR Data Results.</h6>
+      </div>
+
     </div>
 
     <h5 class="box-heading"> Surveys:  </h5>
@@ -66,9 +69,11 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12" *ngIf="!surveyResults || surveyResults.length === 0">
-        <h6> No Survey Results </h6>
+
+      <div class="col-xs-12" *ngIf="! surveyResults || surveyResults.length === 0">
+        <h6> No Survey Results.</h6>
       </div>
+
     </div>
 
   </div>
