--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -10,7 +10,7 @@
         <div class="col-xs-12 flex-xs-middle search-input-full">
           <div class="search-wrapper ">
             <clr-icon shape="search" class="input-icon-absolute is-info"></clr-icon>
-            <input type="text" id="search-db" placeholder="Keyword Search" [(ngModel)]="searchText" (ngModelChange)="searchDomain()">
+            <input type="text" id="search-db" placeholder="Keyword Search" [formControl]="searchText" autofocus>
           </div>
         </div>
       </div>
