chart click progress

--- a/public-ui/src/app/views/db-home/db-home.component.html
+++ b/public-ui/src/app/views/db-home/db-home.component.html
@@ -40,7 +40,7 @@
     <div class="white-card-box" >
       <div class="row flex-items-xs-middle">
         <div class="col-sm-9 col-xs-12>">
-          <h5 class="box-title"> Electronic Health Record Browser </h5>
+          <h5 class="box-title"> Physical Measurements Go here  </h5>
           <p class="box-sub-title">
             Dig deeper into the electronic health record data by exploring how the AoU data utilizes the OMOP CDM.
             Learn more about how standard and source vocabularies interact and explore the nuances of the data model structure.
