--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -21,30 +21,9 @@
 
 
 <div class="row">
-  <div class="col-md-4 col-sm-4 col-xs-12">
-    <div class="white-card-box top-stat one-row">
-      <div class="row ">
-        <div class="col-xs-12">
-          <h5 class="box-title">
-            Participants
-          </h5>
-          <div class="card-stat">
-            > {{minParticipantCount | number}}
-          </div>
-          <p class="card-text bigger">
-            out of {{totalParticipants | number}}
-            total participants with one or more relevant {{dbDomain.domainDisplay.toLowerCase()}}.
-          </p>
 
-          <div class="card-text bottom info-text">
-            <clr-icon shape="info-standard" class="is-solid"></clr-icon> Why a range of particpants?
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div class="col-md col-sm col-xs-12">
+  <div class="col-md-12 col-sm col-xs-12">
     <div class="white-card-box top-stat one-row">
       <div class="row " *ngIf="searchResults.length > 0">
         <div class="col-md-4 col-xs-12">
