RW-803 add attributes-page component

--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -12,6 +12,7 @@
             Criteria Tree
           </button>
           <button type="button" class="btn"
+            *ngIf="ctype !== 'pm'"
             [class.active]="mode === 'modifiers'"
             (click)="mode = 'modifiers'">
             Modifiers
