--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -1,6 +1,18 @@
-<p>
-  attributes-page works!
-</p>
-<div *ngIf="node">
-  {{node.get('id','')}}
+<div class="title">
+  {{node.get('name','')}}
 </div>
+<form #attrs="ngForm">
+  <section class="form-block">
+    <div class="form-group" *ngFor="let field of fields">
+      <label>{{field}}</label>
+      <div class="select">
+        <select name="operator" ngModel>
+          <option value="=">Equals</option>
+          <option value=">=">Greater than or Equal to</option>
+          <option value="<=">Less than or Equal to</option>
+          <option value="<>">Between</option>
+        </select>
+      </div>
+    </div>
+  </section>
+</form>
