--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -1,18 +1,23 @@
 <div class="title">
   {{node.get('name','')}}
 </div>
-<form #attrs="ngForm">
+<form #attrs="ngForm" (ngSubmit)="addAttrs(attrs)">
   <section class="form-block">
-    <div class="form-group" *ngFor="let field of fields">
+    <div class="form-group" *ngFor="let field of fields; let i = index">
       <label>{{field}}</label>
       <div class="select">
-        <select name="operator" ngModel>
+        <select [name]="'operator'+i" ngModel>
           <option value="=">Equals</option>
           <option value=">=">Greater than or Equal to</option>
           <option value="<=">Less than or Equal to</option>
           <option value="<>">Between</option>
         </select>
       </div>
+      <input type="number" [name]="'valueA'+i" ngModel>
+      <label *ngIf="attrs.value['operator'+i] === '<>'">and</label>
+      <input *ngIf="attrs.value['operator'+i] === '<>'" type="number" [name]="'valueB'+i" ngModel>
     </div>
+    <button class="btn link" type="button" (click)="cancel()">Cancel</button>
+    <button class="btn btn-primary" type="submit">Add Item</button>
   </section>
 </form>
