--- a/ui/src/app/cohort-search/selection-info/selection-info.component.html
+++ b/ui/src/app/cohort-search/selection-info/selection-info.component.html
@@ -10,7 +10,7 @@
     <small *ngIf="index > 0" class="font-weight-bold">OR</small>
     <small *ngIf="parameter.get('group')" class="text-muted">Group</small>
     <small class="name">
-      <strong>{{ _type }}</strong>
+      <strong *ngIf="parameter.get('type') !== 'PM'">{{ _type }}</strong>
       <span class="text-muted">{{ name }}</span>
       <span class="text-muted">{{ attribute }}</span>
     </small>
