--- a/public-ui/src/app/views/quick-search/quick-search.component.html
+++ b/public-ui/src/app/views/quick-search/quick-search.component.html
@@ -38,8 +38,7 @@
               {{r.countValue | number}}
             </div>
             <p class="card-text bigger">
-              There are {{r.countValue | number}} {{r.domainDisplay.toLowerCase()}} out of {{totalParticipants | number}}
-              total participants.
+              <em> <b>concepts </b></em> match your search.
             </p>
             <div>
               <button class="btn btn-primary" (click)="viewResults(r)"> View Full List </button>
