--- a/ui/src/app/views/admin-review-workspace/component.html
+++ b/ui/src/app/views/admin-review-workspace/component.html
@@ -1,6 +1,6 @@
 <h2>Review Workspaces</h2>
 <div *ngIf="fetchingWorkspacesError" class="error">
-  Error fetching workspaces for review
+  <div>Error fetching workspaces for review. Please <a (click)="submitFetchingWorkspacesBugReport()">submit a bug report</a>.</div>
   <clr-icon style="margin-left: 1rem;" shape="times" (click)="fetchingWorkspacesError = false"></clr-icon>
 </div>
 <div *ngIf="contentLoaded; else contentLoading">
@@ -22,7 +22,7 @@
 
 <clr-modal [(clrModalOpen)]="reviewError" *ngIf="reviewError">
   <h3 class="modal-title">Error:</h3>
-  <div class="modal-body">Could not review workspace '{{reviewedWorkspace.name}}'.</div>
+  <div class="modal-body">Could not review workspace '{{reviewedWorkspace.name}}'. Please <a (click)="submitReviewWorkspaceBugReport()">submit a bug report</a>.</div>
   <div class="modal-footer">
     <button type="button" class="btn btn-primary" (click)="reviewError = false">Ok</button>
   </div>
@@ -34,3 +34,4 @@
     <span class="loading-text">Loading workspaces for review...</span>
   </div>
 </ng-template>
+<app-bug-report></app-bug-report>
