--- a/ui/src/app/views/signed-in/component.html
+++ b/ui/src/app/views/signed-in/component.html
@@ -7,22 +7,28 @@
     <img [src]="headerImg" class="header-image" routerLink="/">
     <app-breadcrumb></app-breadcrumb>
   </div>
-  <clr-dropdown style="margin-right: 1rem; margin-bottom: 0.5rem;">
-    <div style="display: flex; justify-content: space-around; align-items: center" clrDropdownTrigger>
-      <img [src]="profileImage" style="border-radius: 100px; height: 42px; width: 42px">
-      <h6 style="padding: 0.5rem;">
-        {{givenName}} {{familyName}}
-      </h6>
-      <clr-icon shape="caret down" style="width: 0.5rem; height: 0.5rem"></clr-icon>
+  <div style="display: flex; align-items: center;">
+    <div class="error" style="margin-bottom: 0.5rem; margin-right: 1rem;" *ngIf="errorHandlingService.profileLoadError">
+      Error loading profile.
+      <clr-icon style="margin-left: 1rem;" shape="times" (click)="errorHandlingService.profileLoadError = false"></clr-icon>
     </div>
-    <clr-dropdown-menu clrPosition="bottom-right" *clrIfOpen>
-      <a routerLink="/profile" clrDropdownItem>Profile</a>
-      <a routerLink="/settings" clrDropdownItem>Settings</a>
-      <div class="dropdown-divider"></div>
-      <button id="report-bug" class="btn" (click)="bugReportComponent.reportBug();">Report A Bug</button>
-      <a href="javascript:;" (click)="signOut()" clrDropdownItem>Sign Out</a>
-    </clr-dropdown-menu>
-  </clr-dropdown>
+    <clr-dropdown style="margin-right: 1rem; margin-bottom: 0.5rem;">
+      <div style="display: flex; justify-content: space-around; align-items: center" clrDropdownTrigger>
+        <img [src]="profileImage" style="border-radius: 100px; height: 42px; width: 42px">
+        <h6 style="padding: 0.5rem;">
+          {{givenName}} {{familyName}}
+        </h6>
+        <clr-icon shape="caret down" style="width: 0.5rem; height: 0.5rem"></clr-icon>
+      </div>
+      <clr-dropdown-menu clrPosition="bottom-right" *clrIfOpen>
+        <a routerLink="/profile" clrDropdownItem>Profile</a>
+        <a routerLink="/settings" clrDropdownItem>Settings</a>
+        <div class="dropdown-divider"></div>
+        <button id="report-bug" class="btn" (click)="bugReportComponent.reportBug();">Report A Bug</button>
+        <a href="javascript:;" (click)="signOut()" clrDropdownItem>Sign Out</a>
+      </clr-dropdown-menu>
+    </clr-dropdown>
+  </div>
 </div>
 
 <div class="content-container">
