--- a/ui/src/app/views/workspace-nav-bar/component.html
+++ b/ui/src/app/views/workspace-nav-bar/component.html
@@ -40,11 +40,12 @@
 </clr-button-group>
 <clr-modal [(clrModalOpen)]="workspaceDeletionError">
   <h3 class="modal-title">Error:</h3>
-  <div class="modal-body">Could not delete workspace '{{workspace.name}}'.</div>
+  <div class="modal-body">Could not delete workspace '{{workspace.name}}'. Please <a (click)="submitWorkspaceDeleteBugReport()">submit a bug report.</a></div>
   <div class="modal-footer">
     <button type="button" class="btn btn-primary" (click)="workspaceDeletionError = false">Ok</button>
   </div>
 </clr-modal>
 
 <app-workspace-share></app-workspace-share>
+<app-bug-report></app-bug-report>
 <router-outlet></router-outlet>
