--- a/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
+++ b/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
@@ -5,15 +5,15 @@
 </div>
 
 <div class="row concept-charts chart"  >
-  <div class="col-md-4 col-xs-12" *ngIf="genderAnalysis"  >
+  <div class="col-md-4 col-xs-12" *ngIf="showGender && genderAnalysis"  >
     <app-chart [analysis]="genderAnalysis" [backgroundColor]="backgroundColor"> </app-chart>
   </div>
-  <div class="col-md-4 col-xs-12 chart" *ngIf="ageAnalysis" >
+  <div class="col-md-4 col-xs-12 chart" *ngIf="showAge && ageAnalysis" >
     <app-chart [analysis]="ageAnalysis" [pointWidth]="20" [backgroundColor]="backgroundColor"> </app-chart>
   </div>
 
-  <div class="col-md-4 col-xs-12 chart" >
+  <div class="col-md-4 col-xs-12 chart"  *ngIf="showSources && ageAnalysis && sourceConcepts && sourceConcepts.length">
     <!--<button class="btn btn-link btn-sm" (click)="toggleSourceConcepts()"> Show Sources </button>-->
-    <app-chart *ngIf="sourceConcepts && sourceConcepts.length > 0" [concepts]="sourceConcepts" [pointWidth]="20" [backgroundColor]="backgroundColor" [chartTitle]="'Sources'"> </app-chart>
+    <app-chart [concepts]="sourceConcepts" [pointWidth]="20" [backgroundColor]="backgroundColor" [chartTitle]="'Sources'"> </app-chart>
   </div>
 </div>
