--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div class="col-md-8 col-xs-12 chart-wrapper flex-xs-middle">
-            <app-chart [concepts]="searchResults" [pointWidth]="20" [backgroundColor]="'#D9E4EA'"> </app-chart>
+            <app-chart [concepts]="top10Results" [pointWidth]="20" [backgroundColor]="'#D9E4EA'"> </app-chart>
         </div>
       </div>
 
@@ -58,17 +58,31 @@
     <div class="white-card-box">
       <div class="results-grid" *ngIf="searchResults.length > 0" >
         <div class="row expandable-grid-row" *ngFor="let r of searchResults, let i = index" [ngClass]="{'expanded-grid-row': r.expanded}" >
-          <div class="col-md-4 flex-xs-middle"> {{i+1}}. {{r.conceptName}} <span class="debug"> ( conceptId:{{r.conceptId}} Standard:{{r.standardConcept}} )</span></div>
-          <div class="col-md-3 flex-xs-middle"> {{r.countValue | number }} partipants</div>
-          <div class="col-md-4 flex-xs-middle"> {{r.vocabularyId}} {{r.conceptCode}}</div>
-          <div class="col-md-1 flex-xs-middle"> <button class="icon-btn" (click)="r.expanded = !r.expanded"> <clr-icon shape="bar-chart" style="height: 24px; color: #2691D0;"></clr-icon> </button> </div>
+          <div class="col-md-4 flex-xs-middle"> {{i+1}}. {{r.conceptName | highlightSearch : searchText}} <span class="debug"> ( conceptId:{{r.conceptId}} Standard:{{r.standardConcept}} )</span></div>
+          <div class="col-md-3 flex-xs-middle">
+            {{r.countValue | number }} partipants
+            <button class="icon-btn" (click)="r.expanded = !r.expanded">
+              <clr-icon shape="bar-chart" style="height: 1rem; width: 1rem;color: #2691D0;"></clr-icon>
+            </button>
+          </div>
+          <div class="col-md-4 flex-xs-middle">
+            {{r.vocabularyId}} {{r.conceptCode}}
+            <button class="icon-btn" (click)="toggleSources(r)" > <clr-icon shape="bar-chart" style="height: 1rem; width: 1rem; color: #2691D0;"></clr-icon> </button>
+          </div>
+          <!-- <div class="col-md-1 flex-xs-middle">
+            <button class="icon-btn" (click)="r.expanded = !r.expanded">
+              <clr-icon shape="bar-chart" style="height: 24px; color: #2691D0;"></clr-icon>
+            </button>
+          </div> -->
           <div class="col-xs-12 row-expansion flex-xs-middle" *ngIf="r.expanded">
-            <app-concept-charts [concept]="r" [backgroundColor]="'#ECF1F4'"></app-concept-charts>
+            <app-concept-charts [concept]="r" [showSources]="r.showSources" [backgroundColor]="'#ECF1F4'"></app-concept-charts>
           </div>
 
         </div>
       </div>
-      <div class="row"> <div class="col-md-4 col-xs-12"> <button class="btn btn-primary" [routerLink]="['/quick-search']"> Start New Quick Search </button></div></div>
+      <div class="row"> <div class="col-md-4 col-xs-12">
+        <button class="btn btn-primary" [routerLink]="['/quick-search']"> Start New Quick Search </button>
+      </div>
     </div>
   </div>
 </div>
