--- a/public-ui/src/app/styles/buttons.css
+++ b/public-ui/src/app/styles/buttons.css
@@ -70,8 +70,8 @@ button.btn.btn-lg {
 }
 
 button.btn.btn-link {
-  color: #4a4a4a;
-  font-size: 14px;
+  /*color: #4a4a4a;*/
+  /*font-size: 14px;*/
 }
 
 button.icon-btn {
