--- a/public-ui/src/app/views/quick-search/quick-search.component.html
+++ b/public-ui/src/app/views/quick-search/quick-search.component.html
@@ -29,7 +29,7 @@
 
     <h5 class="box-heading" *ngIf="!loading" > EHR Domains: </h5>
     <div class="row" *ngIf="!loading" >
-      <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12" *ngFor="let r of domainResults">
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12" *ngFor="let r of domainResults">
           <div class="white-card-box search-result">
             <h5 class="box-title">
               {{r.domainDisplay}}
