--- a/public-ui/src/app/views/survey-view/survey-view.component.html
+++ b/public-ui/src/app/views/survey-view/survey-view.component.html
@@ -5,7 +5,7 @@
     <div class="col-xs-12">
       <div class="page-header">
         <div *ngIf="survey && survey.conceptId">
-          <h2> {{survey.domainDisplay}} Survey Module ({{survey.conceptId}}) </h2>
+          <h2> {{survey.domainDisplay}} Survey Module </h2>
           <h4 class="view-sub-title">{{survey.domainDesc}}. </h4>
         </div>
       </div>
@@ -25,6 +25,9 @@
             <div class="card-stat">
               {{survey.countValue | number }}
             </div>
+            <div class="card-text">
+              partipants completed this survey
+            </div>
           </div>
         </div>
       </div>
@@ -40,6 +43,9 @@
             <div class="card-stat">
               <span *ngIf="loading" class="spinner spinner-md"> </span>
               <span *ngIf="!loading" >{{ surveyResult.items.length }} </span>
+            </div>
+            <div class="card-text">
+              questions on this survey
             </div>
           </div>
         </div>
@@ -65,27 +71,32 @@
         </div>
       </div>
       <div class="row box-sub-title">
-        <div *ngIf="loading" class="col-xs-12 flex">  <span *ngIf="loading" class="spinner spinner-md"> </span> </div>
-        <p class="results-heading no-results" *ngIf="questions.length === 0 && !loading">
-          <span *ngIf="searchMethod === 'and'"> No questions match *ALL* keywords: <mark> {{searchText}}</mark>.
-            <span  class="search-extra"> <a class="extra-search" (click)="setSearchMethod('or')"> Match Any Key Word </a>.</span>
-          </span>
-          <span *ngIf="searchMethod === 'or'"> No questions match any of the keywords: <mark> {{searchText}}</mark>.
-            <span  class="search-extra"> <a class="extra-search" (click)="setSearchMethod('or')"> Start Over </a>.</span>
-          </span>
-        </p>
-        <p class="results-heading" *ngIf="questions.length > 0 && !loading">
-          <span *ngIf="searchMethod==='or'" >
-            <b> {{questions.length}} </b> questions match <b>*ANY*</b> keyword: <mark>{{searchText}}</mark>.
-            <a class="extra-search" (click)="setSearchMethod('and')"> Match All Key Words </a>.
-          </span>
-          <span *ngIf="searchMethod==='and'" >
-            <span> <b> {{questions.length}} </b> questions match <b>*ALL*</b> keywords: <mark>{{searchText}}</mark>.</span>
-            <a class="extra-search" (click)="setSearchMethod('or')"> Match Any Key Word </a>.
-          </span>
-          <br>
-          Click on each response to view age and gender distributions.
-        </p>
+        <div *ngIf="loading" class="col-xs-12 flex">
+          <span *ngIf="loading" class="spinner spinner-md"> </span>
+        </div>
+        <div class="col-xs-12 flex" *ngIf="prevSearchText.length > 0">
+          <p class="results-heading no-results" *ngIf="questions.length === 0 && !loading">
+            <span *ngIf="searchMethod === 'and'"> No questions match *ALL* keywords: <mark> {{searchText}}</mark>.
+              <span  class="search-extra"> <button class="btn btn-link" (click)="setSearchMethod('or')">Match any keyword</button> </span>
+            </span>
+            <span *ngIf="searchMethod === 'or'"> No questions match any of the keywords: <mark> {{searchText}}</mark>.
+              <span  class="search-extra"> <button class="btn btn-link" (click)="setSearchMethod('or', true)">Reset search</button></span>
+            </span>
+          </p>
+          <p class="results-heading" *ngIf="questions.length > 0 && !loading">
+            <span *ngIf="searchMethod==='or'" >
+              <b> {{questions.length}} </b> questions match <b>*ANY*</b> keyword: <mark>{{searchText}}</mark>.
+              <button class="btn btn-link" (click)="setSearchMethod('and')">Match all keywords</button>
+            </span>
+            <span *ngIf="searchMethod==='and'" >
+              <span> <b> {{questions.length}} </b> questions match <b>*ALL*</b> keywords: <mark>{{searchText}}</mark>.</span>
+              <button class="btn btn-link" (click)="setSearchMethod('or')">Match any keyword</button>
+            </span>
+          </p>
+        </div>
+        <div class="col-xs-12">
+        Click on each response to view age and gender distributions.
+        </div>
       </div>
       <div class="row question-result" *ngFor="let q of questions, let i = index">
 
@@ -98,11 +109,12 @@
               <div class="box-sub-title question" innerHtml="{{ q.conceptName | highlightSearch : searchText}} ({{q.conceptId}})">   </div>
             </div>
 
-            <div class="col-xs-12 col-sm-12 answers-bar-col">
+            <!--<div class="col-md-6 col-xs-12 col-sm-6 answers-bar-col">
               <div class="chart-wrapper">
                 <app-chart *ngIf="q.countAnalysis" [analysis]="q.countAnalysis" [chartType]="'bar'" (resultClicked)="graphAnswerClicked(item)"></app-chart>
               </div>
-            </div>
+            </div>-->
+
 
           </div>
 
@@ -114,15 +126,16 @@
 
           <div class="row answers" [hidden]="!showAnswer[q.conceptId]">
 
-            <div class="col-sm-7 col-xs-12 answer-list">
+            <div class="col-md-6 col-sm-6 col-xs-12 answer-list">
               <div *ngFor="let a of q.countAnalysis.results"  >
                 <div class="answer-text" (click)="showAnswerGraphs(q, a)" [class.answer-active]="q.selectedAnswer && q.selectedAnswer.id === a.id">
                   <label innerHtml="{{a.stratum4 | highlightSearch : searchText }}"> {{a.stratum4}} </label>
+                  <label class="participant-count"> -- {{a.countValue | number}}  </label>
                 </div>
               </div>
             </div>
 
-            <div class="col-sm-5 col-xs-12 answer-charts">
+            <div class="col-md-6 col-sm-6 col-xs-12 answer-charts">
               <div class="" *ngIf="q.selectedAnswer" >
                 <div class="chart-wrapper">
                   <app-chart [analysis]="q.genderAnalysis" [selectedResult]="q.selectedAnswer" [backgroundColor]="'#D9E4EA'"></app-chart>
