[RW-785] [Risk=no] Add many error handlers for specific cases (#913)
* Add many error handlers for specific cases

* Fix small UX things

* Fix tests

* Abstract error class

* More calls to action and design feedback

* Fix tests

* Fix tests

* Update styling and remove bottom left message

--- a/ui/src/app/views/bug-report/component.css
+++ b/ui/src/app/views/bug-report/component.css
@@ -13,3 +13,9 @@
 .notebook-logs {
   display: inline-block;
 }
+
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
