--- a/ui/src/app/views/profile-page/component.html
+++ b/ui/src/app/views/profile-page/component.html
@@ -80,7 +80,7 @@
     </div>
     <div class="field-wrapper" style="padding-right: 2rem;">
       <h3 class="profile-header" style="margin-top: 0">Profile Completion Progress:</h3>
-      <div class="card" style="height: 10.4rem;">
+      <div class="card">
         <div style="display: flex; align-items: center;">
           <div style="height: 7.8rem;">
             <ngx-charts-pie-chart
@@ -129,6 +129,22 @@
             </div>
           </div>
         </div>
+        <div *ngIf="termsOfServiceError" class="error">
+          <div> Error submitting terms of service. Please <a (click)="submitTermsOfServiceBugReport()">submit a bug report.</a></div>
+          <clr-icon style="margin-left: 1rem;" shape="times" (click)="termsOfServiceError = false"></clr-icon>
+        </div>
+        <div *ngIf="ethicsTrainingError" class="error">
+          <div> Error submitting ethics training. Please <a (click)="submitEthicsTrainingBugReport()">submit a bug report.</a></div>
+          <clr-icon style="margin-left: 1rem;" shape="times" (click)="ethicsTrainingError = false"></clr-icon>
+        </div>
+        <div *ngIf="demographicSurveyError" class="error">
+          <div> Error submitting demographics survey. Please <a (click)="submitDemographicsSurveyBugReport()">submit a bug report.</a></div>
+          <clr-icon style="margin-left: 1rem;" shape="times" (click)="demographicSurveyError = false"></clr-icon>
+        </div>
+        <div *ngIf="idVerificationError" class="error">
+          <div> Error submitting identity verification. Please <a (click)="submitIdVerificationBugReport()">submit a bug report.</a></div>
+          <clr-icon style="margin-left: 1rem;" shape="times" (click)="idVerificationError = false"></clr-icon>
+        </div>
       </div>
     </div>
     <div class="field-wrapper">
@@ -169,3 +185,4 @@
     </div>
   </div>
 </div>
+<app-bug-report></app-bug-report>
