--- a/ui/src/app/views/settings/component.css
+++ b/ui/src/app/views/settings/component.css
@@ -1,3 +1,9 @@
 .notebook-settings {
   margin-top: 1rem;
 }
+
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
