Workspace list create new workspace card

--- a/ui/src/app/views/signed-in/component.html
+++ b/ui/src/app/views/signed-in/component.html
@@ -2,7 +2,7 @@
   <div class="header-container">
     <div #sidenavToggleElement class="sidenav-toggle" [ngClass]="{'rotate': sidenavToggle}">
       <clr-icon shape="bars" (click)="sidenavToggle = !sidenavToggle"
-          style="width: 1.5rem; height: 1.5rem; fill: #6cace4"></clr-icon>
+          style="width: 1.5rem; height: 1.5rem; fill: #216FB4"></clr-icon>
     </div>
     <img [src]="headerImg" class="header-image" routerLink="/">
     <app-breadcrumb></app-breadcrumb>
