--- a/ui/src/app/views/workspace-list/component.html
+++ b/ui/src/app/views/workspace-list/component.html
@@ -12,13 +12,6 @@
         </div>
       </div>
     </div>
-    <button class="btn btn-secondary tooltip tooltip-lg tooltip-top-left" (click)="addWorkspace()" [disabled]="!billingProjectInitialized">
-      <clr-icon shape="plus"></clr-icon>
-      New Workspace
-      <span *ngIf="!billingProjectInitialized" class="tooltip-content">
-        Your billing project is currently being created, please wait.
-      </span>
-    </button>
   </div>
   <div class="alert alert-danger" *ngIf="errorText">
     <div class="alert-items">
@@ -39,7 +32,11 @@
         May take a few minutes
       </p>
     </div>
-    <div class="card" *ngFor="let workspaceResponse of workspaceList" routerLink="{{workspaceResponse.workspace.namespace}}/{{workspaceResponse.workspace.id}}">
+    <div class="card create-workspace-card" (click)="addWorkspace()" *ngIf="!workspacesLoading">
+      <div class="create-workspace-text">Create a New Workspace</div>
+      <clr-icon class="plus-circle" shape="plus-circle"></clr-icon>
+    </div>
+    <div class="card workspace-card" *ngFor="let workspaceResponse of workspaceList" routerLink="{{workspaceResponse.workspace.namespace}}/{{workspaceResponse.workspace.id}}">
       <h5 class="workspace-name">{{workspaceResponse.workspace.name}}</h5>
       <div class="description">{{workspaceResponse.workspace.description}}</div>
       <div class="status-text">
