--- a/ui/src/app/views/workspace-list/component.css
+++ b/ui/src/app/views/workspace-list/component.css
@@ -66,7 +66,7 @@
 
 .card *.date-text {
   font-size: 12px;
-  line-height: 14px;
+  line-height: 17px;
 }
 
 .card *.status-text {
@@ -107,7 +107,8 @@
   width: 6rem;
 }
 
-.plus-circle {
+.card .plus-circle {
+  margin-top: 0.25rem;
   width: 32px;
   height: 32px;
   color: #216FB4;
