made searches debounce uniformly. Punchlist things

--- a/public-ui/src/app/views/db-home/db-home.component.html
+++ b/public-ui/src/app/views/db-home/db-home.component.html
@@ -32,7 +32,7 @@
           </p>
         </div>
         <div class="col-sm-3  col-xs-12 button-col">
-          <button class="btn btn-primary search" [routerLink]="['surveys']">Search</button>
+          <button class="btn btn-primary search" [routerLink]="['surveys']">Browse</button>
         </div>
       </div>
     </div>
@@ -40,14 +40,13 @@
     <div class="white-card-box" >
       <div class="row flex-items-xs-middle">
         <div class="col-sm-9 col-xs-12>">
-          <h5 class="box-title"> Physical Measurements Go here  </h5>
+          <h5 class="box-title"> Browse Program Physical Measurements  </h5>
           <p class="box-sub-title">
-            Dig deeper into the electronic health record data by exploring how the AoU data utilizes the OMOP CDM.
-            Learn more about how standard and source vocabularies interact and explore the nuances of the data model structure.
+            View cohort distributions for physical measurements collected during program enrollment.
           </p>
         </div>
         <div class="col-sm-3 col-xs-12 button-col">
-          <button class="btn btn-primary search" [routerLink]="['ehr-search']">Search</button>
+          <button class="btn btn-primary search" [routerLink]="['physical-measurements']">Browse</button>
         </div>
       </div>
     </div>
